force-app/main/default/objects/MEM_Group__c/MEM_Group__c.object-meta.xml
<CustomObject>
    <label>Matter Engagement Model Group</label>
    <nameField>
        <displayFormat>MEMG-{000000000}</displayFormat>
        <label>Matter Engagement Model Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Engagement Model Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>