force-app/main/default/objects/MEM_Group__c/fields/Agreement_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Contract</label>
    <referenceTo>SymphonyLF__Agreement_Contract__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>