force-app/main/default/objects/MEM_Group__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <label>Attorney&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>