force-app/main/default/objects/MEM_Group__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copyright</label>
    <referenceTo>SymphonyLF__Copyright__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>