force-app/main/default/objects/MEM_Group__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design</label>
    <referenceTo>SymphonyLF__Design__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>