force-app/main/default/objects/MEM_Group__c/fields/Dispute_Opposition__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Opposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispute/Opposition</label>
    <referenceTo>SymphonyLF__Dispute_Opposition__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>