force-app/main/default/objects/MEM_Group__c/fields/General_Matter__c.field-meta.xml
<CustomField>
    <fullName>General_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Matter</label>
    <referenceTo>SymphonyLF__General_Matter__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>