force-app/main/default/objects/MEM_Group__c/fields/MEM_10__c.field-meta.xml
<CustomField>
    <fullName>MEM_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter Engagement Model 10</label>
    <referenceTo>SymphonyLF__Matter_Engagement_Model__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups10</relationshipName>
    <type>Lookup</type>
</CustomField>