force-app/main/default/objects/MEM_Group__c/fields/Paralegals__c.field-meta.xml
<CustomField>
    <fullName>Paralegals__c</fullName>
    <label>Paralegals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>