force-app/main/default/objects/MEM_Group__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent</label>
    <referenceTo>SymphonyLF__Patent__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>