force-app/main/default/objects/MEM_Group__c/fields/Show_to_User__c.field-meta.xml
<CustomField>
    <fullName>Show_to_User__c</fullName>
    <formula>IF(MEM_1__r.User_Id__c = $User.Id, true,
IF(MEM_2__r.User_Id__c= $User.Id, true,
IF(MEM_3__r.User_Id__c= $User.Id, true,
IF(MEM_4__r.User_Id__c= $User.Id, true,
IF(MEM_5__r.User_Id__c= $User.Id, true,
IF(MEM_6__r.User_Id__c= $User.Id, true,
IF(MEM_7__r.User_Id__c= $User.Id, true,
IF(MEM_8__r.User_Id__c= $User.Id, true,
IF(MEM_9__r.User_Id__c= $User.Id, true,
IF(MEM_10__r.User_Id__c= $User.Id, true,
IF(MEM_11__r.User_Id__c= $User.Id, true,
IF(MEM_12__r.User_Id__c= $User.Id, true,
IF(MEM_13__r.User_Id__c= $User.Id, true,
IF(MEM_14__r.User_Id__c= $User.Id, true,
IF(MEM_15__r.User_Id__c= $User.Id, true,
IF(MEM_16__r.User_Id__c= $User.Id, true,
IF(MEM_17__r.User_Id__c= $User.Id, true,
IF(MEM_18__r.User_Id__c= $User.Id, true,
false
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show to User</label>
    <type>Checkbox</type>
</CustomField>