force-app/main/default/objects/MEM_Group__c/fields/Trademark__c.field-meta.xml
<CustomField>
    <fullName>Trademark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trademark</label>
    <referenceTo>SymphonyLF__Trademark__c</referenceTo>
    <relationshipLabel>Matter Engagement Model Groups</relationshipLabel>
    <relationshipName>Matter_Engagement_Model_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>