force-app/main/default/objects/MEM_Group__c/fields/Working_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Working_Attorneys__c</fullName>
    <label>Working Attorney&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>